# rfesi

./: .gitignore  .rusty-hook.toml  Cargo.toml  Justfile  LICENSE-MIT  README.md
.github/workflows/: ci.yml  release.yml
examples/: auth_fresh.rs  auth_fresh_application.rs  auth_fresh_client_secret.rs  auth_from_refresh_token.rs  unauthorized_requests.rs
resources/test/keys/: jwtRS256.key  jwtRS256.key.pub
src/: builders.rs  client.rs  errors.rs  jwt_util.rs  lib.rs  macros.rs  pkce.rs  prelude.rs  spec.rs
src/groups/: alliance.rs  assets.rs  bookmarks.rs  calendar.rs  character.rs  clones.rs  contacts.rs  contracts.rs  corporation.rs  dogma.rs  faction_warfare.rs  fittings.rs  fleets.rs  incursions.rs  industry.rs  insurance.rs  killmails.rs  location.rs  loyalty.rs  mail.rs  market.rs  mod.rs  opportunities.rs  planetary_interaction.rs  routes.rs  search.rs  skills.rs  sovereignty.rs  status.rs  universe.rs  user_interface.rs  wallet.rs  wars.rs
src/models/: auth.rs  mod.rs
