[package]
name = "rfesi"
version = "0.15.0"
authors = ["Celeo <mattboulanger@fastmail.com>"]
edition = "2021"
description = "Rust API for EVE Online's ESI"
readme = "README.md"
homepage = "https://github.com/celeo/rfesi"
repository = "https://github.com/celeo/rfesi"
documentation = "https://docs.rs/rfesi"
license = "MIT OR Apache-2.0"
exclude = [".github"]
keywords = ["eve", "eve-online", "esi"]
categories = ["api-bindings"]

[dependencies]
alcoholic_jwt = { version = "4091.0.0", optional = true }
base64 = "0.21.0"
http = "0.2.9"
log = "0.4.17"
rand = { version = "0.8.5", optional = true }
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0.155", features = ["derive"] }
serde_json = "1.0.94"
thiserror = "1.0.39"

[dev-dependencies]
mockito = "1.0.0"
pretty_env_logger = "0.4.0"
rusty-hook = "0.11.2"
tokio = { version = "1.26.0", features = ["full"] }

[features]
default = ["random_state", "validate_jwt"]
random_state = ["dep:rand"]
validate_jwt = ["dep:alcoholic_jwt"]
