[package]
name = "rfesi"
version = "0.36.0"
authors = ["Celeo <mattboulanger@fastmail.com>"]
edition = "2021"
description = "Rust API for EVE Online's ESI"
readme = "README.md"
homepage = "https://github.com/celeo/rfesi"
repository = "https://github.com/celeo/rfesi"
documentation = "https://docs.rs/rfesi"
license = "MIT OR Apache-2.0"
exclude = [".github"]
keywords = ["eve", "eve-online", "esi"]
categories = ["api-bindings"]

[dependencies]
base64 = "0.21.4"
http = "0.2.9"
jsonwebtoken = { version = "9.1.0", optional = true }
log = "0.4.20"
rand = "0.8.5"
reqwest = { version = "0.11.20", features = ["json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
sha2 = "0.10.8"
thiserror = "1.0.48"

[dev-dependencies]
pretty_env_logger = "0.5.0"
rusty-hook = "0.11.2"
tokio = { version = "1.32.0", features = ["full"] }
chrono = "0.4.31"
uuid = { version = "1.5.0", features = ["v4", "fast-rng"] }

[features]
default = ["random_state", "validate_jwt"]
random_state = []
validate_jwt = ["dep:jsonwebtoken"]
