[package]
name = "rfesi"
version = "0.50.0"
authors = ["Celeo <mattboulanger@fastmail.com>"]
edition = "2021"
description = "Rust API for EVE Online's ESI"
readme = "README.md"
homepage = "https://github.com/celeo/rfesi"
repository = "https://github.com/celeo/rfesi"
documentation = "https://docs.rs/rfesi"
license = "MIT OR Apache-2.0"
exclude = [".github"]
keywords = ["eve", "eve-online", "esi"]
categories = ["api-bindings"]

[dependencies]
base64 = "0.22.1"
http = "1.3.1"
jsonwebtoken = { version = "9.3.1", optional = true }
log = "0.4.27"
rand = "0.8.5"
reqwest = { version = "0.12.15", default-features = false, features = ["json", "charset", "http2", "macos-system-configuration"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
thiserror = "1.0.69"
tokio = "1"

[dev-dependencies]
pretty_env_logger = "0.5.0"
rusty-hook = "0.11.2"
tokio = { version = "1.45.0", features = ["full"] }
chrono = "0.4.41"
uuid = { version = "1.16.0", features = ["v4", "fast-rng"] }

[features]
default = ["random_state", "validate_jwt", "default-tls"]
random_state = []
validate_jwt = ["dep:jsonwebtoken"]
default-tls = ["reqwest/default-tls"]
rustls-tls = ["reqwest/rustls-tls"]
